--- a/publications.html
+++ b/publications.html
@@ -123,17 +123,12 @@
 
   <div class="publications-list">
     <div class="publication-card">
-      <h4>Current-driven dynamics and inhibition of the skyrmion Hall effect of ferrimagnetic skyrmions in GdFeCo films</h4>
-      <p>S Woo, KM Song, X Zhang, Y Zhou, M Ezawa, X Liu, S Finizio, J Raabe, ...<br>
-      <em>Nature communications </em>, 9 (1), 959 (2018)</p>
-      <a href="https://www.nature.com/articles/s41467-018-03378-7" target="_blank">View Paper</a>
+      <!-- <h4>Current-driven dynamics and inhibition of the skyrmion Hall effect of ferrimagnetic skyrmions in GdFeCo films</h4> -->
+      <p>1.	“Exploring thermal properties of an artificial quasicrystal spin-ice system with Penrose tiling”, Hee Young Kwon*, Han Gyu Yoon, Seong Min Park, Changyeon Won, Jun Woo Choi*, Physical Review B 111, 134437 (2025).<br>
     </div>
 
     <div class="publication-card">
-      <h4>Spin-orbit torque-driven skyrmion dynamics revealed by time-resolved X-ray microscopy</h4>
-      <p>S Woo, KM Song, HS Han, MS Jung, MY Im, KS Lee, KS Song, P Fischer, ...<br>
-      <em>Nature communications </em>, 8 (1), 15573 (2017)</p>
-      <a href="https://www.nature.com/articles/ncomms15573" target="_blank">View Paper</a>
+      <p>2.	“Characterizing topological properties in 2D textures with magnetic structure tensors”, Seong Min Park, Tae Jung Moon, Gyunghun Yu, Han Gyu Yoon, Jun Woo Choi, Hee Young Kwon, Changyeon Won, iScience 28, 112592 (2025).<br>
     </div>
 
     <!-- 더 많은 publication-card를 여기에 추가하세요 -->
