--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
-      <a href="members.html">Members</a>
+            <div class="dropdown">
+        <a href="members.html">Members</a>
+        <div class="dropdown-content">
+          <a href="current-members.html">Current Members</a>
+          <a href="former-members.html">Former Members</a>
+        </div>
+      </div>
       <a href="publications.html">Publications</a>
       <a href="contact.html">Contact</a>
     </div>
@@ -125,6 +131,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
