--- a/former-members.html
+++ b/former-members.html
@@ -124,9 +124,9 @@
 <div class="member-list">
   <div class="member-row">
     <div class="name"><strong>Han Gyu Yoon</strong></div>
-    <div class="details">
-      2024.03–2025.04 Graduate Student<br>
-      <span class="current-position">Current Position: Ph.D. Course at Department of Physics, Kyung Hee University</span>
+    <div class="info">
+      <div>2024.03–2025.04 Graduate Student</div>
+      <div class="current-position">Current Position: Ph.D. Course at Department of Physics, Kyung Hee University</div>
     </div>
   </div>
 
