--- a/former-members.html
+++ b/former-members.html
@@ -123,10 +123,12 @@
 
 <div class="member-list">
   <div class="member-row">
-    <div class="name"><strong>Han Gyu Yoon</strong></div>
-    <div class="info">
+    <div class="left-col"><strong>Han Gyu Yoon</strong></div>
+    <div class="right-col">
       <div>2024.03–2025.04 Graduate Student</div>
-      <div class="current-position">Current Position: Ph.D. Course at Department of Physics, Kyung Hee University</div>
+      <div class="current-position">
+        Current Position: Ph.D. Course at Department of Physics, Kyung Hee University
+      </div>
     </div>
   </div>
 
