--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Research | Spintronics Group</title>
+  <title>Research | Quantum-material Spintronics Group @ KIST</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -10,7 +10,14 @@
       font-family: "Hind", sans-serif;
       background-color: #f9f9f9;
     }
-
+    .header {
+      background-image: url("header-image.jpg");
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 20px 40px;
+      text-align: center;
+    }
     .navbar {
       display: flex;
       justify-content: space-between;
@@ -94,7 +101,7 @@
 <body>
 
   <nav class="navbar">
-    <div class="logo"><strong>Spintronics Group</strong></div>
+    <div class="logo"><strong>Quantum-material Spintronics Group @ KIST</strong></div>
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
@@ -113,27 +120,33 @@
     <h2>Research Topics</h2>
 
     <div class="research-topic">
-      <h3>1. Electric Control of Magnetism</h3>
-      <p>We explore how electric fields and ionic gating techniques can control magnetic states in 2D van der Waals materials. This opens up opportunities for ultra-low-power spintronic devices.</p>
-      <img src="research1.jpg" alt="Electric control of magnetism">
+      <h3>1. Emergent magnetic phenomena in van der Waals heterostructures</h3>
+      <p>We fabricate and investigate 2D heterostructures with tailored interfaces, combining vdW magnetic materials with other quantum materials. We investigate fundamental properties originating from the hetero-interface, and engineer magnetic properties via the proximity effect between distinct materials.</p>
+      <img src="research1.jpg" alt="Emergent magnetic phenomena in van der Waals heterostructures">
     </div>
 
     <div class="research-topic">
-      <h3>2. Spin Transport and Magnetoresistance</h3>
-      <p>Our group investigates spin current transport in magnetic heterostructures, and studies tunneling magnetoresistance, non-local spin signals, and spin Hall effect in low-dimensional systems.</p>
-      <img src="research2.jpg" alt="Spin transport image">
+      <h3>2. Spintronic devices</h3>
+      <p>We investigate various spin transport phenomena in nano-electronic devices. By utilizing magnetic, 2D, and topological materials, we aim to develop highly efficient spintronic devices and design novel devices with new functionalities.</p>
+      <img src="research2.jpg" alt="Spintronic devices">
     </div>
 
     <div class="research-topic">
-      <h3>3. van der Waals Magnetic Heterostructures</h3>
-      <p>We fabricate and study 2D magnetic stacks with tailored interfaces. By combining different materials, we design new functionalities such as chiral spin textures, topological phases, and proximity effects.</p>
-      <img src="research3.jpg" alt="vdW heterostructure image">
+      <h3>3. Electric field control of magnetism</h3>
+      <p>We explore how electric fields and ionic gating techniques can be used to control magnetic states in 2D materials and thin films. This opens up opportunities for ultra-low-power spintronic devices.</p>
+      <img src="research3.jpg" alt="Electric field control of magnetism">
     </div>
 
+     <div class="research-topic">
+      <h3>4. Magnetic domains & Topological spin textures</h3>
+      <p>We study magnetic domain phases of ultrathin magnetic films and 2D magnetic material based heterostructures. Topological properties and spin dynamics of nanoscale spin structures (e.g., magnetic skyrmions, chiral spin textures) are investigated.</p>
+      <img src="research4.jpg" alt="Magnetic domains & Topological spin textures">
+    </div>
+    
   </section>
 
   <footer>
-    &copy; 2025 Spintronics Group – junwoo@kist.re.kr
+    &copy; 2025 Quantum-material Spintronics Group @ KIST – junwoo@kist.re.kr
   </footer>
 
 </body>
