--- a/research.html
+++ b/research.html
@@ -122,25 +122,25 @@
     <div class="research-topic">
       <h3>1. Emergent magnetic phenomena in van der Waals heterostructures</h3>
       <p>We fabricate and investigate 2D heterostructures with tailored interfaces, combining vdW magnetic materials with other quantum materials. We investigate fundamental properties originating from the hetero-interface, and engineer magnetic properties via the proximity effect between distinct materials.</p>
-      <img src="research1.jpg" alt="Emergent magnetic phenomena in van der Waals heterostructures">
+      <img src="research1.png" alt="Emergent magnetic phenomena in van der Waals heterostructures">
     </div>
 
     <div class="research-topic">
       <h3>2. Spintronic devices</h3>
       <p>We investigate various spin transport phenomena in nano-electronic devices. By utilizing magnetic, 2D, and topological materials, we aim to develop highly efficient spintronic devices and design novel devices with new functionalities.</p>
-      <img src="research2.jpg" alt="Spintronic devices">
+      <img src="research2.png" alt="Spintronic devices">
     </div>
 
     <div class="research-topic">
       <h3>3. Electric field control of magnetism</h3>
       <p>We explore how electric fields and ionic gating techniques can be used to control magnetic states in 2D materials and thin films. This opens up opportunities for ultra-low-power spintronic devices.</p>
-      <img src="research3.jpg" alt="Electric field control of magnetism">
+      <img src="research3.png" alt="Electric field control of magnetism">
     </div>
 
      <div class="research-topic">
       <h3>4. Magnetic domains & Topological spin textures</h3>
       <p>We study magnetic domain phases of ultrathin magnetic films and 2D magnetic material based heterostructures. Topological properties and spin dynamics of nanoscale spin structures (e.g., magnetic skyrmions, chiral spin textures) are investigated.</p>
-      <img src="research4.jpg" alt="Magnetic domains & Topological spin textures">
+      <img src="research4.png" alt="Magnetic domains & Topological spin textures">
     </div>
     
   </section>
