--- a/members.html
+++ b/members.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spintronics Group | Exploring 2D Magnetism</title>
+  <title>Quantum-material Spintronics Group @ KIST | Exploring 2D Magnetism</title>
   <link rel="shortcut icon" href="favicon.png">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
   <style>
@@ -103,7 +103,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><strong>Spintronics Group</strong></div>
+    <div class="logo"><strong>Quantum-material Spintronics Group @ KIST</strong></div>
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
@@ -125,8 +125,10 @@
   <div class="members-grid">
     <div class="member-card">
       <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:150px; height:auto;">
-      <h4>Dr. Jun Woo Choi</h4>
-      <p>Principal Investigator</p>
+         <div class="member-info">
+        <h4>Dr. Jun Woo Choi</h4>
+        <p>Principal Investigator</p>
+      </div>
     </div>
   </div>
 
