--- a/members.html
+++ b/members.html
@@ -127,7 +127,16 @@
       <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:150px; height:auto;">
          <div class="member-info">
         <h4>Dr. Jun Woo Choi</h4>
-        <p>Principal Investigator</p>
+        <p>Professional Experience</p>
+            <p>2024.09 – Present 	Professor, KU-KIST Graduate School, Korea University</p>
+            <p>2021.03 – Present 	Principal Research Scientist, Center for Semiconductor Technology, KIST</p>
+            <p>2018.09 – 2019.08	Visiting Scholar, Department of Physics, University of California, Berkeley</p>
+            <p>2010.03 – 2021.02 	Senior Research Scientist, Center for Spintronics, KIST</p>
+           <p>2008.12 – 2010.02 	Research Scientist, Center for Spintronics, KIST</p>
+
+           <h4>Education</h4>
+        <p>2008.12			Ph.D., Physics, University of California, Berkeley (advisor: Z. Q. Qiu)</p>
+        <p>2003.02			B.S., Physics, Seoul National University</p>
       </div>
     </div>
   </div>
