--- a/members.html
+++ b/members.html
@@ -137,6 +137,7 @@
            <h4>Education</h4>
         <p>2008.12			Ph.D., Physics, University of California, Berkeley (advisor: Z. Q. Qiu)</p>
         <p>2003.02			B.S., Physics, Seoul National University</p>
+         <p>  <a href="https://scholar.google.com/citations?hl=en&user=zuwBbCsAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">https://scholar.google.com/citations?hl=en&user=zuwBbCsAAAAJ&view_op=list_works&sortby=pubdate</a></p>
       </div>
     </div>
   </div>
