--- a/members.html
+++ b/members.html
@@ -63,32 +63,25 @@
     .news ul {
       padding-left: 20px;
     }
-    .members-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
     .member-card {
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 20px;
-      width: 220px;
+      display: flex;  /* ✅ 핵심: 사진+설명을 가로로 정렬 */
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
     }
+
     .member-card img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 6px;
+      width: 150px;
+      height: auto;
+      border-radius: 8px;
     }
-    .member-card h4 {
-      margin: 12px 0 6px;
+
+    .member-info h4 {
+      margin: 0;
     }
-    .member-card p {
-      font-size: 0.9em;
-      color: #666;
+
+    .member-info p {
+      margin: 5px 0 0;
     }
     footer {
       background-color: #fff;
