--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,15 @@
       padding: 60px 20px 30px;
     }
 
+     .header {
+      background-image: url("header-image.jpg");
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 20px 40px;
+      text-align: center;
+    }
+    
     .header h1 {
       margin-bottom: 10px;
     }
@@ -123,7 +132,7 @@
     <div class="map">
       <!-- Google Maps Embed: 실제 주소로 바꾸면 정확하게 위치 표시됨 -->
       <iframe 
-        src="https://maps.app.goo.gl/oYR9yA9KfZ1gULX47"
+        src="https://naver.me/5bVs264N"
         allowfullscreen=""
         loading="lazy"
       ></iframe>
