--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spintronics Group | Exploring 2D Magnetism</title>
+  <title>Quantum-material Spintronics Group @ KIST | Exploring 2D Magnetism</title>
   <link rel="shortcut icon" href="favicon.png">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
   <style>
