--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact | Spintronics Group</title>
+  <title>Contact | Quantum-material Spintronics Group @ KIST</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
