--- a/contact.html
+++ b/contact.html
@@ -126,13 +126,13 @@
       <p><strong>Email:</strong> junwoo@kist.re.kr</p>
       <p><strong>Phone:</strong> +82-2-958-6445</p>
       <p><strong>Lab Address:</strong> L6220, KIST, Hwarang-ro 14-gil 5, Seongbuk-gu, Seoul, Korea</p>
-      <p>* Link to Research Center website:<a href="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3161.0459095449214!2d127.04276607629802!3d37.601078522145926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7cd6ae2e13%3A0x6ad590233985143c!2z7ZWc6rWt6rO87ZWZ6riw7Iig7Jew6rWs7JuQKEtJU1Qp!5e0!3m2!1sko!2skr!4v1754376829289!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>">maps</a></p>
+      <p>* Link to Research Center website:<a href="<iframe src="https://www.kist.re.kr/ko/research/advanced-materials-greeting001.do" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>">https://www.kist.re.kr/ko/research/advanced-materials-greeting001.do</a></p>
     </div>
 
     <div class="map">
       <!-- Google Maps Embed: 실제 주소로 바꾸면 정확하게 위치 표시됨 -->
       <iframe 
-        src="https://naver.me/5bVs264N"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3161.0459095449214!2d127.04276607629802!3d37.601078522145926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7cd6ae2e13%3A0x6ad590233985143c!2z7ZWc6rWt6rO87ZWZ6riw7Iig7Jew6rWs7JuQKEtJU1Qp!5e0!3m2!1sko!2skr!4v1754376829289!5m2!1sko!2skr"
         allowfullscreen=""
         loading="lazy"
       ></iframe>
