--- a/publications.html
+++ b/publications.html
@@ -103,7 +103,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><strong>Spintronics Group</strong></div>
+    <div class="logo"><strong>Quantum-material Spintronics Group @ KIST</strong></div>
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
