--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 <body>
 
   <nav class="navbar">
-    <div class="logo"><strong>Spintronics Group</strong></div>
+    <div class="logo"><strong>Quantum-material Spintronics Group @ KIST</strong></div>
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
