--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Spintronics Group – junwoo@kist.re.kr
+    &copy; 2025 Quantum-material Spintronics Group @ KIST – junwoo@kist.re.kr
   </footer>
 
 </body>
