--- a/current-members.html
+++ b/current-members.html
@@ -142,11 +142,16 @@
       <h4>Dr. Hee Young Kwon</h4>
      <div class="member-info">
        <p><strong>Professional Experience & Education</strong></p>
-       <p>2019.09 – Present 	Postdoctoral Researcher, Center for Semiconductor Technology, KIST</p>
-       <p>XXXX.XX-XXXX.XX	Intern Researcher, Asan Medical Center</p>
-       <p>XXXX.XX 		Ph.D., Physics, Kyung Hee University, Seoul, Korea</p>
+       <p>2019.09 - Present Postdoctoral Researcher, Center for Semiconductor Technology, KIST</p>
+       <p>2019.03 - 2019.05 Intern Researcher, Department of Convergence Medicine, Asan Medical Center</p>
+       <p>2017.02 - 2017.12 Deep Learning Developer, Algorigo, Inc. </p>
+       <p>2012.03 - 2019.08 Ph.D., Department of Physics, Kyung Hee University, Seoul, Korea</p>
+       <p>2009.03 - 2011.08 M.S., Department of Physics, Kyung Hee University, Seoul, Korea</p>
+       <p>2005.03 - 2009.02 B.S., Department of Physics, Kyung Hee University, Seoul, Korea</p>
        <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+       <p>Developing novel deep learning model to solve various optimization problems in fundamental science </p>
+       <p>Designing deep generative models to generate physically plausible states</p>
+       <p>Investigating physical properties of magnetic domains and domain walls</p>
       </div>
     </div>
   </div>
@@ -156,8 +161,11 @@
         <h4>Dr. Howon Lee</h4>
           <div class="member-info">
         <p><strong>Professional Experience & Education</strong></p>
-       <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+       <p>2023.02 – Present Postdoctoral Researcher, Center for Semiconductor Technology, KIST</p>
+       <p></p>2022.03 – 2023.01 Postdoctoral Researcher, Department of Physics, Yonsei University
+        <p></p>2022.02 Ph.D., Physics, Yonsei University (advisor: Jae Hoon Kim)
+        <p><strong>Research Interests</strong></p>
+       <p>Ultrafast spin dynamics, 2D spintronics</p>
        </div>
     </div>
   </div>
@@ -178,8 +186,11 @@
         <h4>Dr. Myeongjin Jang</h4>
           <div class="member-info">
         <p><strong>Professional Experience & Education</strong></p>
+            <p>2025.02 – Present Postdoctoral Researcher, Center for Semiconductor Technology, KIST</p>
+            <p>2025.02 Ph.D., Physics, Yonsei University (advisor: Kwanpyo Kim)</p>
+            <p>2019.02 B.S., Physics, Yonsei University</p>
         <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+       <p>Exploring the relationship between structure and properties in 2D magnetic crystals using transmission electron microscopy</p>
       </div>
     </div>
   </div>
@@ -189,8 +200,12 @@
         <h4>Dr. Junghyun Kim</h4>
               <div class="member-info">
         <p><strong>Professional Experience & Education</strong></p>
+                <p>2024.09 - Postdoctoral Researcher, Center for Semiconductor Technology, KIST</p>
+                <p>2024.08 Ph. D., Physics, Seoul National University (Advisor: Prof. Je-Geun Park)</p>
+                <p>2018.02 B.S., Physics, Ewha Womans University</p>
         <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+       <p>Electrical transport and magneto-optical measurement of 2D magnetic van der Waals materials and heterostructures</p>
+       <p>Ionic gating effect on 2D magnetism</p>
       </div>
     </div>
   </div>
@@ -202,8 +217,11 @@
       <h4>PARK CHAN HYUK</h4>
         <div class="member-info">
       <p><strong>Professional Experience & Education</strong></p>
-      <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+           <p>2023.04 ~ 2025.01 Intern Research, Center for Semiconductor, KIST</p>
+          <p>2025.02 - Present M.S&Ph.D Degree Course, KU-KIST Graduate School, Korea University</p>
+          <p>2020.02 B.S., Physics, Chung-Ang University</p>
+       <p><strong>Research Interests</strong></p>
+       <p>Emergent magnetic phenomena in van der Waals heterostructures</p>
     </div>
     </div>
   </div>
@@ -215,15 +233,18 @@
       <h4>Junpyo Jang</h4>
         <div class="member-info">
       <p><strong>Professional Experience & Education</strong></p>
+           <p>2025.04 – Present Intern Researcher, Center for Semiconductor Technology, KIST</p>
+           <p>2023.03 – 2025.03 Engineer, Semiconductor R&D Center, Samsung Electronics</p>
+           <p>2017.03 – 2023.02 B.S., Materials Science and Engineering, Korea University, Seoul, Korea</p>
       <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+       <p>TBU</p>
     </div>
     </div>
   </div>
      </section>
 
   <footer>
-    &copy; 2025 Spintronics Group – junwoo@kist.re.kr<br>
+    &copy; Quantum-material Spintronics Group @ KIST – junwoo@kist.re.kr<br>
     Hosted at KIST, Seoul, Republic of Korea
   </footer>
 </body>
