--- a/members.html
+++ b/members.html
@@ -175,8 +175,12 @@
         <h4>Dr. Min-Jae Kim</h4>
           <div class="member-info">
         <p><strong>Professional Experience & Education</strong></p>
+        <p>2024.09 - Postdoctoral Researcher, Center for Semiconductor Technology, KIST</p>
+        <p>2022.03 Postdoctoral Researcher, TU Dresden & Max-Planck Institute of Solid State Research </p>
+        <p>2022 Ph.D., Physics, University of Stuttgart & Max-Planck Institute of Solid State Research</p>
         <p><strong>Research Interests</strong></p>
-       <p>XXX</p>
+       <p>Ultrafast spectroscopy of quantum materials, focusing on superconductivity, excitonic insulators, and THz nonlinear optics</p>
+        <p>Development of ultrafast optoelectronic devices based on quantum materials</p>
       </div>
     </div>
   </div>
