--- a/members.html
+++ b/members.html
@@ -64,10 +64,11 @@
       padding-left: 20px;
     }
     .member-card {
-      display: flex;  /* ✅ 핵심: 사진+설명을 가로로 정렬 */
-      align-items: center;
-      gap: 20px;
-      margin-bottom: 20px;
+  display: flex;
+  flex-direction: column; /* 세로 정렬 */
+  align-items: center;    /* 중앙 정렬 (이름이 이미지 아래 가운데 오도록) */
+  max-width: 250px;       /* 카드 최대 너비 */
+  text-align: center;     /* 텍스트 가운데 정렬 */
     }
 
     .member-card img {
