--- a/members.html
+++ b/members.html
@@ -63,14 +63,37 @@
     .news ul {
       padding-left: 20px;
     }
-    .member-card {
+.members-grid {
   display: flex;
-  flex-direction: column; /* 세로 정렬 */
-  align-items: center;    /* 중앙 정렬 (이름이 이미지 아래 가운데 오도록) */
-  max-width: 250px;       /* 카드 최대 너비 */
-  text-align: center;     /* 텍스트 가운데 정렬 */
-    }
+  flex-wrap: wrap;
+  gap: 20px;
+}
 
+.member-card {
+  display: flex;
+  flex-direction: row;   /* 좌우 배치 */
+  align-items: flex-start;
+  gap: 20px;
+  max-width: 900px;
+}
+
+.member-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.member-left img {
+  width: 150px;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.member-info {
+  flex: 1; /* 오른쪽 영역이 남은 공간 채우도록 */
+}
     .member-card img {
       width: 150px;
       height: auto;
@@ -118,8 +141,10 @@
       <h3>Principal Investigator</h3>
   <div class="members-grid">
     <div class="member-card">
+         <div class="member-left">
       <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:150px; height:auto;">
        <h4>Dr. Jun Woo Choi</h4>
+             </div>
          <div class="member-info">
             <p><strong>Professional Experience</strong></p>
             <p>2024.09 – Present 	Professor, KU-KIST Graduate School, Korea University</p>
