--- a/Gallery.html
+++ b/Gallery.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Quantum-material-based Spintronics</title>
+  <link rel="shortcut icon" href="favicon.png">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: "Hind", sans-serif;
+      background-color: #f9f9f9;
+      color: #030303;
+    }
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #fff;
+      padding: 20px 40px;
+      border-bottom: 3px solid #a51c30;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .navbar a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #a51c30;
+      font-weight: bold;
+    }
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+    .header {
+      background-image: url("header-image.jpg");
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 20px 40px;
+      text-align: center;
+    }
+    .header h1 {
+      font-size: 3em;
+      margin: 0 0 10px;
+    }
+    .header p {
+      font-size: 1.3em;
+    }
+    .section {
+      max-width: 1100px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+    .section h2 {
+      border-left: 4px solid #a51c30;
+      padding-left: 12px;
+    }
+    .news ul {
+      padding-left: 20px;
+    }
+    footer {
+      background-color: #fff;
+      text-align: center;
+      margin-top: 40px;
+      padding: 30px;
+      font-size: 0.9em;
+      border-top: 1px solid #ccc;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <nav class="navbar">
+    <div class="logo"><strong>Quantum-material Spintronics Group @ KIST</strong></div>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="research.html">Research</a>
+            <div class="dropdown">
+        <a href="members.html">Members</a>
+        <div class="dropdown-content">
+          <a href="current-members.html">Current Members</a>
+          <a href="former-members.html">Former Members</a>
+        </div>
+      </div>
+      <a href="publications.html">Publications</a>
+      <a href="contact.html">Contact</a>
+    </div>
+  </nav>
 
+  <div class="header">
+    <h1>Quantum-material-based Spintronics</h1>
+    <p>Exploring 2D magnetism and spin transport</p>
+  </div>
+
+
+
+
+  <footer>
+    &copy; 2025 Spintronics Group – junwoo@kist.re.kr<br>
+    Hosted at KIST, Seoul, Republic of Korea
+  </footer>
+</body>
+</html>
