--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
         <div class="dropdown-content">
           <a href="current-members.html">Current Members</a>
           <a href="former-members.html">Former Members</a>
-        </div>
+          </div>
       </div>
+      <a href="gallery.html">Gallery</a>
       <a href="publications.html">Publications</a>
       <a href="contact.html">Contact</a>
     </div>
@@ -131,6 +132,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
