--- a/gallery.html
+++ b/gallery.html
@@ -80,14 +80,9 @@
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
-            <div class="dropdown">
-        <a href="members.html">Members</a>
-        <div class="dropdown-content">
-          <a href="current-members.html">Current Members</a>
-          <a href="former-members.html">Former Members</a>
-        </div>
-      </div>
+      <a href="members.html">Members</a>
       <a href="publications.html">Publications</a>
+      <a href="gallery.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
   </nav>
@@ -97,7 +92,18 @@
     <p>Exploring 2D magnetism and spin transport</p>
   </div>
 
-
+ <div class="gallery">
+    <a href="images/lab1.jpg" data-lightbox="lab-gallery" data-title="Lab View 1">
+      <img src="images/lab1_thumb.jpg" alt="Lab View 1">
+    </a>
+    <a href="images/lab2.jpg" data-lightbox="lab-gallery" data-title="Lab View 2">
+      <img src="images/lab2_thumb.jpg" alt="Lab View 2">
+    </a>
+    <a href="images/lab3.jpg" data-lightbox="lab-gallery" data-title="Lab View 3">
+      <img src="images/lab3_thumb.jpg" alt="Lab View 3">
+    </a>
+    <!-- 필요에 따라 이미지 추가 -->
+  </div>
 
 
   <footer>
