--- a/gallery.html
+++ b/gallery.html
@@ -105,24 +105,24 @@
   </nav>
 
   <div class="gallery">
-    <a href="images lab1.jpg" data-lightbox="lab-gallery" data-title="Lab View 1 - Main Lab">
+    <a href="images lab1.jpg" data-lightbox="lab-gallery" data-title="Lab View 1 - Team Workshop">
       <div class="gallery-item">
         <img src="images lab1_thumb.jpg" alt="Lab View 1">
-        <div class="gallery-caption">Main Lab – Instruments and Workbench</div>
+        <div class="gallery-caption">Team Workshop</div>
       </div>
     </a>
 
-    <a href="images lab2.jpg" data-lightbox="lab-gallery" data-title="Lab View 2 - Sample Prep Area">
+    <a href="images lab2.jpg" data-lightbox="lab-gallery" data-title="Lab View 2 - Team Workshop">
       <div class="gallery-item">
         <img src="images lab2_thumb.jpg" alt="Lab View 2">
-        <div class="gallery-caption">Sample Preparation Area – Clean and Organized</div>
+        <div class="gallery-caption">Team Workshop</div>
       </div>
     </a>
 
-    <a href="images lab3.jpg" data-lightbox="lab-gallery" data-title="Lab View 3 - Team Working">
+    <a href="images lab3.jpg" data-lightbox="lab-gallery" data-title="Lab View 3 - Team Workshop">
       <div class="gallery-item">
         <img src="images lab3_thumb.jpg" alt="Lab View 3">
-        <div class="gallery-caption">Team Collaboration – Discussion & Experiment</div>
+        <div class="gallery-caption">Team Workshop</div>
       </div>
     </a>
 
