--- a/gallery.html
+++ b/gallery.html
@@ -105,23 +105,23 @@
   </nav>
 
   <div class="gallery">
-    <a href="images lab1.jpg" data-lightbox="lab-gallery" data-title="Lab View 1 - Team Workshop">
+    <a href="imageslab1.jpg" data-lightbox="lab-gallery" data-title="Lab View 1 - Team Workshop">
       <div class="gallery-item">
-        <img src="images lab1_thumb.jpg" alt="Lab View 1">
+        <img src="imageslab1.jpg" alt="Lab View 1">
         <div class="gallery-caption">Team Workshop</div>
       </div>
     </a>
 
-    <a href="images lab2.jpg" data-lightbox="lab-gallery" data-title="Lab View 2 - Team Workshop">
+    <a href="imageslab2.jpg" data-lightbox="lab-gallery" data-title="Lab View 2 - Team Workshop">
       <div class="gallery-item">
-        <img src="images lab2_thumb.jpg" alt="Lab View 2">
+        <img src="imageslab2.jpg" alt="Lab View 2">
         <div class="gallery-caption">Team Workshop</div>
       </div>
     </a>
 
-    <a href="images lab3.jpg" data-lightbox="lab-gallery" data-title="Lab View 3 - Team Workshop">
+    <a href="imageslab3.jpg" data-lightbox="lab-gallery" data-title="Lab View 3 - Team Workshop">
       <div class="gallery-item">
-        <img src="images lab3_thumb.jpg" alt="Lab View 3">
+        <img src="imageslab3.jpg" alt="Lab View 3">
         <div class="gallery-caption">Team Workshop</div>
       </div>
     </a>
