--- a/members.html
+++ b/members.html
@@ -291,6 +291,85 @@
   </div>
      </section>
 
+  <section class="section">
+    <h2>Former Members</h2>
+
+<div class="member-list">
+  <div class="member-row">
+    <div class="left-col"><strong>Han Gyu Yoon</strong></div>
+    <div class="right-col">
+      <div>2024.03–2025.04 Graduate Student</div>
+      <div class="current-position">
+        Current Position: Ph.D. Course at Department of Physics, Kyung Hee University
+      </div>
+    </div>
+  </div>
+
+  <div class="member">
+    <strong>Taegyu Lee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2024.03–2024.12 Intern Researcher <br>
+    <span class="current-position">Current Position: Engineer, KLA Corporation</span>
+  </div>
+  <div class="member">
+    <strong>Dr. Jaeun Eom</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2021.03–2024.02 Graduate Student (Ph.D. in Physics, Seoul National University) <br>
+    <span class="current-position">Current Position: Engineer, SK Hynix</span>
+  </div>
+</div>
+      <div class="member">
+    <strong>Dr. Inhak Lee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2021.02-2023.10 Postdoctoral Researcher <br>
+    <span class="current-position">Current Position: Engineer, Samsung Electronics</span>
+  </div>
+</div>
+      <div class="member">
+    <strong>Jungyun Kee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2020.11-2023.08 Graduate Student<br>
+    <span class="current-position">Current Position: Ph.D. Course at Department of Physics, Soongsil University </span>
+  </div>
+</div>
+      <div class="member">
+    <strong>Dr. Jinhong Lee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2021.10-2022.06 Postdoctoral Researcher <br>
+    <span class="current-position">Current Position: Research Fellow, Samsung Global Research</span>
+  </div>
+</div>
+      <div class="member">
+    <strong>Dr. Sang Yeop Lee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2017.10-2020.11 Postdoctoral Researcher<br>
+    <span class="current-position">Current Position: Engineer, Wonik IPS </span>
+  </div>
+</div>
+          <div class="member">
+    <strong>Dr. Hyung Keun Gweon</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2020.03-2020.08 Postdoctoral Researcher<br>
+    <span class="current-position">Current Position: Engineer, Samsung Electronics</span>
+  </div>
+</div>
+      <div class="member">
+    <strong>Dr. Kyung Mee Song</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2018.09-2020.05 Postdoctoral Researcher<br>
+        2013.02-2018.08 Graduate Student (Ph.D. in Physics, Sookmyung Women’s University)
+    <span class="current-position">Current Position: Engineer, Samsung Advanced Institute of Technology (SAIT)</span>
+  </div>
+</div>
+         <div class="member">
+    <strong>Chanki Lee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2019.03-2020.04 Graduate Student<br>
+    <span class="current-position">Current Position: Founder & CEO, FiLighten</span>
+  </div>
+</div>
+          <div class="member">
+    <strong>Dong Seob Kim</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2018.03-2019.06 Intern Researcher<br>
+    <span class="current-position">Current Position: Ph.D. Course at Dept. of Physics, University of Texas at Austin</span>
+  </div>
+</div>
+          <div class="member">
+    <strong>Dr. Dong-Ok Kim</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2016.01-2018.02 Graduate Student (Ph.D. in Physics, Soongsil University)<br>
+    <span class="current-position">Current Position: Engineer, KEPCO</span>
+  </div>
+</div>
+          <div class="member">
+    <strong>Dr. Taufik Bonaedy</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2012.09-2018.02 Graduate Student (Ph.D., Korea Univ. of Science and Technology)<br>
+  </div>
+</div>
+          <div class="member">
+    <strong>Kyoung-Min Lee</strong> &nbsp;&nbsp;|&nbsp;&nbsp; 2012.06-2017.06 Graduate Student<br>
+  </div>
+</div>
+
+
   <footer>
     &copy; Quantum-material Spintronics Group @ KIST – junwoo@kist.re.kr<br>
     Hosted at KIST, Seoul, Republic of Korea
